# woody-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test_eval_ruby.py
examples/: arts_and_crafts_cabinet.py  behavior_tester.py  ruby_tester.py  simple_ruby_eval.py  simple_test.py
src/sketchup_mcp/: __init__.py  config.py  connection.py  server.py
src/sketchup_mcp/resources/: lumber_standards.json  sketchup_api.md
src/sketchup_mcp/templates/: __init__.py  base.py  bookshelf.py  box.py  cabinet.py  cutting_board.py  desk.py  picture_frame.py  shelf_bracket.py  table.py  tray.py  workbench.py
src/sketchup_mcp/tools/: __init__.py  build_project.py  describe_model.py  eval_ruby.py  export_scene.py  get_cut_list.py
su_mcp/: su_mcp.rb
su_mcp/su_mcp/: main.rb
