[project]
name = "woody-mcp"
version = "0.2.0"
description = "AI-powered woodworking assistant for SketchUp Make 2017"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/woody-mcp"
Issues = "https://github.com/yourusername/woody-mcp/issues"

[project.scripts]
woody-mcp = "sketchup_mcp.server:main"

[project.entry-points.mcp]
sketchup = "sketchup_mcp.server:mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"} 